my-app.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: first-deployment
spec:
  selector:
    matchLabels:
      app: my-app
  replicas: 3 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app-01
        image: devopstrainingschool/java-maven-jenkins
        ports:
        - containerPort: 8080
