service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-app
spec:
  type: LoadBalancer
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
