ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app2.yannickeboo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service-app2
            port:
              number: 80
